# schemas

./: CMakeLists.txt  _config.yml  controller_config_schema_1.json  controller_config_schema_2.json  layout_schema_2.json  preference_backend_schema_1.json  preference_backend_schema_2.json  preference_schema_1.json  preferences_schema_2.json  schemacompiler.c  snippet_schema_1.json  workspace_schema_1.json
