FIND_PROGRAM(SCHEMA_COMPILER xxd REQUIRED)
FILE(GLOB SCHEMA_FILES "*.json")

FOREACH(INPUT_FILE ${SCHEMA_FILES})
    SET(OUTPUT_FILE ${INPUT_FILE}.h)
    ADD_CUSTOM_COMMAND(
        OUTPUT ${OUTPUT_FILE}
        DEPENDS ${INPUT_FILE}
        COMMAND ${SCHEMA_COMPILER} -i ${INPUT_FILE} > ${OUTPUT_FILE}
    )
    LIST(APPEND SCHEMA_HEADERS ${OUTPUT_FILE})
ENDFOREACH()

ADD_LIBRARY(carta-schemas ${SCHEMA_HEADERS})
