ADD_EXECUTABLE(schemacompiler schemacompiler.c)
FILE(GLOB SCHEMA_FILES CONFIGURE_DEPENDS "*_schema_*.json")

FOREACH(INPUT_FILE ${SCHEMA_FILES})
    STRING(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}/" "" OUTPUT_FILE "${INPUT_FILE}")
    STRING(APPEND OUTPUT_FILE ".h")
    ADD_CUSTOM_COMMAND(
        OUTPUT ${OUTPUT_FILE}
        DEPENDS schemacompiler ${INPUT_FILE}
        COMMAND schemacompiler ${INPUT_FILE} ${OUTPUT_FILE}
    )
    LIST(APPEND SCHEMA_HEADERS ${OUTPUT_FILE})
ENDFOREACH()

ADD_LIBRARY(carta-schemas INTERFACE ${SCHEMA_HEADERS})
